fixing  overflow problem

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,14 @@ body{
     font-family: $Dosis;
     color: #fff;
     font-size: 16px;
+
+}
+
+html,
+body,
+#root {
+ 
+    /* Prevents overflow on the x-axis */
     overflow-x: hidden;
 }
 
